--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://GabrielDeFreitas.github.io/NLW-06-Discover",
   "name": "nlw-06-discover",
   "version": "1.0.0",
   "description": "Projeto desenvolvido para gerenciar perguntas anonimas de usuários direcionadas ao dono da página. Projeto desenvolvido na semana NLW-6 Rocketseat na missão discover",
@@ -6,7 +7,9 @@
   "scripts": {
     "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init-db": "node src/db/init.js"
+    "init-db": "node src/db/init.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "Gabriel Freitas",
@@ -18,6 +21,7 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "nodemon": "^3.0.3"
   }
 }
