--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init-db": "node src/db/init.js",
-    "deploy": "gh-pages -d"
+    "init-db": "node src/db/init.js"
   },
   "keywords": [],
   "author": "Gabriel Freitas",
